panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__functions__inline__test_error_inline_function_contains_definition_of_static_object.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/functions/inline/test_error_inline_function_contains_definition_of_static_object.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/functions/inline/test_error_inline_function_contains_definition_of_static_object.c"
   (function-definition inline
      g~2 `fn() -> int`
      (compound-statement
         (return (0 `int`)))))

----- stderr -----
