panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__functions__inline__test_error_inline_function_refers_to_identifier_with_internal_linkage.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/functions/inline/test_error_inline_function_refers_to_identifier_with_internal_linkage.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/functions/inline/test_error_inline_function_refers_to_identifier_with_internal_linkage.c"
   (tentative-definition internal a~0 `int` ∅)
   (function-definition inline
      f~1 `fn() -> int`
      (compound-statement
         (return (0 `int`)))))

----- stderr -----
