panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__functions__inline__test_non_inline_declaration_provides_external_definition.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/functions/inline/test_non_inline_declaration_provides_external_definition/f.c
    - panko/tests/cases/execute/functions/inline/test_non_inline_declaration_provides_external_definition/main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/functions/inline/test_non_inline_declaration_provides_external_definition/f.c"
   (function-definition inline
      f~0 `fn() -> int`
      (compound-statement
         (return (42 `int`))))
   (provide-external-definition f))
(translation-unit "panko/tests/cases/execute/functions/inline/test_non_inline_declaration_provides_external_definition/main.c"
   (declaration external f~0 `fn() -> int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (return
            (call `int`
               (addressof `ptr<fn() -> int>`
                  (f~0 `fn() -> int`)))))))

----- stderr -----
